--- a/README
+++ b/README
@@ -1,3 +1,30 @@
 x9wm - x window manger without windows
 xoot - aterm wrapper for x9wm desktops
-SEE http://www.skyfalcon.co.cc for DOCS and latest versions
+
+Please see w9wm online and in several repositories.
+x9wm is just like w9wm but is merged in a single file
+is compiled as a single static binary and linked against
+libx11-dev 
+
+to install:
+1 install libx11-dev x11 developer files
+2 see and run the build file
+3 install nitrogen
+4 makes sure you have a three button mouse
+5 add it to your xsessions as a window manger
+6 login and select x9wm as the window manager
+7 enjoy the smallest / fastest window manager for Linux 
+8 install aterm for beautiful transparent terminals
+9 please read 
+
+Definition: w9wm: Enhanced window manager based on 9wm
+w9wm is a quick and dirty hack based on 9wm. 
+It provides support for virtual screens as well as for keyboard bindings. 
+
+Definition: x9wm is enhanced w9wm - providing small bug fixes / small binary an
+easier modification and fastest remote desktop for VNC / RDP desktop sessions
+for multi-admin remote administration for Windows / Linux and Mac systems from 
+a single remote location / interface.
+
+
+
